<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_type" 
	android:orientation="vertical"
	android:background="@color/black">

<TextView android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/select_type"
		  android:color="#FFFFFF"/>
	

<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/merch"
        android:onClick="merchant" 
        />

<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/cust"  />
		android:onClick="client" 
</LinearLayout>