<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true" 
	android:orientation="vertical"
	android:background="@color/black">
    tools:context=".Merch_trans" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/enter_details" />
        
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Item_code" />
        
     <EditText android:id="@+id/item_code"
 		   android:layout_width="fill_parent" 
 		   android:layout_height="wrap_content"
 		   android:layout_centerHorizontal="true"
           android:layout_centerVertical="true" />
         
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Item_cost" />  
        
     <EditText android:id="@+id/item_cost"
 		   android:layout_width="fill_parent" 
 		   android:layout_height="wrap_content"
 		   android:layout_centerHorizontal="true"
           android:layout_centerVertical="true" />
      
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ok"
        android:onClick="gen_QR" />
        
</LinearLayout>